Basic bootstrap setup

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "scrollreveal": "^4.0.5",
     "sequelize": "^5.3.1",
     "socket.io": "^2.2.0"
   },
