--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "scrollreveal": "^4.0.5",
     "sequelize": "^5.3.1",
     "socket.io": "^2.2.0"
   },
