--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ secrets.js
 .DS_Store
 npm-debug.log
 yarn-error.log
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
