--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
     "dotenv": "^8.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-session": "^1.15.1",
     "history": "^4.9.0",
     "morgan": "^1.9.1",
@@ -82,8 +82,11 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
     "axios-mock-adapter": "^1.16.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.6",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "chai": "^4.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
